[gd_scene load_steps=47 format=3 uid="uid://oedns07ol4yc"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_36k88"]
[ext_resource type="Script" path="res://Scenes/Ground.gd" id="1_gbiat"]
[ext_resource type="FontFile" uid="uid://b4vnrueaby676" path="res://Assets/Fonts/MedievalSharp-Regular.ttf" id="2_f2caj"]
[ext_resource type="PackedScene" uid="uid://dixaush43p6ya" path="res://Graybox Utils/gb_block.tscn" id="2_kwctc"]
[ext_resource type="PackedScene" uid="uid://dfpt1o8g8rngj" path="res://Props/Chest.tscn" id="3_5iol5"]
[ext_resource type="FontFile" uid="uid://cgmmpik56qoat" path="res://Assets/Fonts/Roboto-VariableFont_wdth,wght.ttf" id="3_bvq4v"]
[ext_resource type="Theme" uid="uid://fq3f5aqpe066" path="res://Assets/Themes/Button.tres" id="3_f3woq"]
[ext_resource type="PackedScene" uid="uid://c54fra6i3bswh" path="res://Props/Barrel.tscn" id="4_vmse7"]
[ext_resource type="Texture2D" uid="uid://dic8hqwepeeqr" path="res://Assets/UI Assets/Playbutton UI.png" id="5_jrw1s"]
[ext_resource type="PackedScene" uid="uid://dqyao6x5oq0kc" path="res://Props/Box.tscn" id="5_njdd2"]
[ext_resource type="PackedScene" uid="uid://cbq0vt8tvw5yf" path="res://Shader/CellShader.tscn" id="7_whgx2"]
[ext_resource type="Material" uid="uid://bvwxaar5qs56v" path="res://Assets/Materials/Skeleton_Mat.tres" id="8_u6rtx"]
[ext_resource type="ArrayMesh" uid="uid://ctgnrqjctk35d" path="res://Assets/Models/CM_Skeleton.obj" id="9_mu2pk"]
[ext_resource type="Script" path="res://Scenes/Spiiiiiin.gd" id="10_ul3hu"]
[ext_resource type="PackedScene" uid="uid://d0yg85wo7t53g" path="res://Geometry/Floors/floor_3x2.tscn" id="15_e4xlv"]
[ext_resource type="PackedScene" uid="uid://xloienjp5gji" path="res://Geometry/Floors/floor_1x3.tscn" id="16_g2ca7"]
[ext_resource type="PackedScene" uid="uid://6l0jma6fcotx" path="res://Geometry/Floors/floor_3x3.tscn" id="17_62ap3"]
[ext_resource type="PackedScene" uid="uid://dxn1xe7fd1w1j" path="res://Geometry/Floors/floor_1x2.tscn" id="18_3b8oy"]
[ext_resource type="PackedScene" uid="uid://cwwarm1pwnybw" path="res://Geometry/Walls/wall_3x3.tscn" id="19_bfg7k"]
[ext_resource type="PackedScene" uid="uid://daasdrtjpvsn5" path="res://Geometry/Walls/Misc/door_frame.tscn" id="20_28g8h"]
[ext_resource type="PackedScene" uid="uid://cix6obljtv04c" path="res://Geometry/Walls/wall_3x1.tscn" id="21_0xqav"]
[ext_resource type="PackedScene" uid="uid://b52557k3v885l" path="res://Geometry/Walls/wall_3x0_5.tscn" id="23_562ac"]
[ext_resource type="PackedScene" uid="uid://lwx2rpnho8xf" path="res://Geometry/Walls/Misc/Inside Corners/icorner_3x2.tscn" id="24_30bp4"]
[ext_resource type="PackedScene" uid="uid://ck0uo408vfw4i" path="res://Geometry/Walls/Misc/Inside Corners/icorner_2x2.tscn" id="25_sg6tx"]
[ext_resource type="PackedScene" uid="uid://c61u5ce3abm43" path="res://Geometry/Walls/wall_2x3.tscn" id="26_s4t6e"]
[ext_resource type="PackedScene" uid="uid://dsqnhvdx5uaqc" path="res://Geometry/Walls/wall_2x1.tscn" id="27_emh7y"]
[ext_resource type="PackedScene" uid="uid://bnffyrnbx2qbp" path="res://Geometry/Walls/wall_0_5x3.tscn" id="28_8kia2"]
[ext_resource type="PackedScene" uid="uid://wc0mbl5mniue" path="res://Geometry/Walls/wall_2x0_5.tscn" id="29_5ohsm"]
[ext_resource type="PackedScene" uid="uid://xcqb77c7r58h" path="res://Geometry/Walls/wall_0_5x0_5.tscn" id="30_vdo4m"]
[ext_resource type="PackedScene" uid="uid://cxb2dtolfuotd" path="res://Geometry/Walls/Misc/Outside Corners/ocorner_2x0_5.tscn" id="31_50n6h"]
[ext_resource type="PackedScene" uid="uid://4ynwyvrexvwe" path="res://Geometry/Walls/Misc/Outside Corners/ocorner_0_5x0_5.tscn" id="32_xxhsh"]
[ext_resource type="PackedScene" uid="uid://pdg8rngx73uu" path="res://Geometry/Roof/roof_1x2.tscn" id="33_20nbc"]
[ext_resource type="PackedScene" uid="uid://c111ly3ratye0" path="res://Geometry/Roof/roof_3x3.tscn" id="34_s7yf6"]
[ext_resource type="PackedScene" uid="uid://bfo6omb07mm71" path="res://Geometry/Roof/roof_0_5x2.tscn" id="35_q7l62"]
[ext_resource type="PackedScene" uid="uid://cltfcj334l4rr" path="res://Geometry/Roof/roof_1x3.tscn" id="36_solcj"]
[ext_resource type="PackedScene" uid="uid://drpmn41uv73le" path="res://Geometry/Roof/roof_3x2.tscn" id="37_scpec"]
[ext_resource type="PackedScene" uid="uid://boyhi74etqvv8" path="res://Props/Bonefire.tscn" id="38_7rimi"]
[ext_resource type="PackedScene" uid="uid://86tqqctnpter" path="res://Scenes/enemy.tscn" id="39_nybmh"]

[sub_resource type="LabelSettings" id="LabelSettings_nd5cw"]
line_spacing = 30.0
font_size = 48
font_color = Color(0.882353, 0.545098, 0.290196, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_xhip0"]
dof_blur_far_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_imakp"]
size = Vector2(50, 50)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_3xcv5"]
data = PackedVector3Array(25, 0, 25, -25, 0, 25, 25, 0, -25, -25, 0, 25, -25, 0, -25, 25, 0, -25)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2rnaj"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_hffpi"]
sky_material = SubResource("ProceduralSkyMaterial_2rnaj")

[sub_resource type="Environment" id="Environment_juh5q"]
background_mode = 1
background_energy_multiplier = 0.0
sky = SubResource("Sky_hffpi")
ambient_light_energy = 0.0
tonemap_mode = 2
glow_enabled = true
volumetric_fog_enabled = true
adjustment_enabled = true
adjustment_brightness = 0.66

[sub_resource type="ViewportTexture" id="ViewportTexture_ywirj"]
viewport_path = NodePath("Sprite3D/SubViewport")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_36k88")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title Rect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.298
anchor_top = 0.045
anchor_right = 0.702
anchor_bottom = 0.168
offset_left = -0.296021
offset_top = -0.160002
offset_right = 0.295959
offset_bottom = 0.135994
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.345098, 0.27451, 0.262745, 0.521569)

[node name="Title Text" type="Label" parent="CanvasLayer/Title Rect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_f2caj")
text = "Bonefire"
label_settings = SubResource("LabelSettings_nd5cw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.345098, 0.27451, 0.262745, 1)

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Menu/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 154.0
offset_top = -193.0
offset_right = -406.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4196, 1.81911)

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Menu/ColorRect/MarginContainer2"]
layout_mode = 2
theme_override_colors/default_color = Color(0.996078, 0.898039, 0.666667, 1)
theme_override_fonts/normal_font = ExtResource("3_bvq4v")
text = "WASD to move
Space to jump
Left click to attack
Right click to block
Middle Click to Spawn Fire
I to open inventory
E to loot items
Q to absorb Fire
Esc for menu"
fit_content = true

[node name="PlaybuttonUi" type="Sprite2D" parent="CanvasLayer/Menu/ColorRect/MarginContainer2/RichTextLabel"]
position = Vector2(468.58, 31.4616)
scale = Vector2(0.045068, 0.045068)
texture = ExtResource("5_jrw1s")

[node name="Back" type="Button" parent="CanvasLayer/Menu/ColorRect/MarginContainer2/RichTextLabel"]
layout_mode = 2
offset_left = 378.729
offset_top = 18.6717
offset_right = 845.729
offset_bottom = 179.672
scale = Vector2(0.373718, 0.20174)
theme = ExtResource("3_f3woq")
theme_override_fonts/font = ExtResource("2_f2caj")
theme_override_font_sizes/font_size = 60
text = "Back"
flat = true

[node name="ControlesRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.852
anchor_top = 0.219
anchor_right = 0.961
anchor_bottom = 0.594
offset_left = -18.504
offset_top = 0.0879974
offset_right = 29.928
offset_bottom = 0.0880127
color = Color(0.345098, 0.27451, 0.262745, 0)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ControlesRect"]
visible = false
layout_mode = 0
offset_left = -11.0
offset_top = -13.0
offset_right = 184.0
offset_bottom = 247.0
color = Color(0.996078, 0.898039, 0.666667, 0.439216)

[node name="PlaybuttonUi" type="Sprite2D" parent="CanvasLayer/ControlesRect"]
position = Vector2(90, 28)
scale = Vector2(0.045068, 0.045068)
texture = ExtResource("5_jrw1s")

[node name="Start" type="Button" parent="CanvasLayer/ControlesRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.041
anchor_right = 0.875
anchor_bottom = 0.206
offset_left = -18.096
offset_top = 0.0369997
offset_right = 20.75
offset_bottom = -0.0579987
theme = ExtResource("3_f3woq")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("2_f2caj")
text = "Start Game"
flat = true

[node name="PlaybuttonUi2" type="Sprite2D" parent="CanvasLayer/ControlesRect"]
position = Vector2(90, 88)
scale = Vector2(0.045068, 0.045068)
texture = ExtResource("5_jrw1s")

[node name="Dev Room" type="Button" parent="CanvasLayer/ControlesRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.102
anchor_top = 0.288
anchor_right = 0.875
anchor_bottom = 0.453
offset_left = -17.748
offset_top = 0.0160065
offset_right = 20.75
offset_bottom = -0.0790024
theme = ExtResource("3_f3woq")
theme_override_fonts/font = ExtResource("2_f2caj")
text = "Dev Room"
flat = true

[node name="PlaybuttonUi3" type="Sprite2D" parent="CanvasLayer/ControlesRect"]
position = Vector2(90, 148)
scale = Vector2(0.045068, 0.045068)
texture = ExtResource("5_jrw1s")

[node name="Controles" type="Button" parent="CanvasLayer/ControlesRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.535
anchor_right = 0.875
anchor_bottom = 0.7
offset_left = -18.096
offset_top = -0.00500488
offset_right = 20.75
offset_bottom = -0.0999908
theme = ExtResource("3_f3woq")
theme_override_fonts/font = ExtResource("2_f2caj")
text = "Controles"
flat = true

[node name="PlaybuttonUi4" type="Sprite2D" parent="CanvasLayer/ControlesRect"]
position = Vector2(90, 208)
scale = Vector2(0.045068, 0.045068)
texture = ExtResource("5_jrw1s")

[node name="Quit" type="Button" parent="CanvasLayer/ControlesRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.782
anchor_right = 0.875
anchor_bottom = 0.947
offset_left = -20.358
offset_top = -0.026001
offset_right = 20.75
offset_bottom = -0.121002
theme = ExtResource("3_f3woq")
theme_override_fonts/font = ExtResource("2_f2caj")
text = "Quit"
flat = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.8437, 1.44916, 4.09305)
attributes = SubResource("CameraAttributesPractical_xhip0")
current = true
far = 25.0

[node name="Geometry" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.24544, 0)
mesh = SubResource("PlaneMesh_imakp")
skeleton = NodePath("../..")
script = ExtResource("1_gbiat")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/Ground"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/Ground/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_3xcv5")

[node name="Wall_E" parent="Geometry" instance=ExtResource("2_kwctc")]
transform = Transform3D(-9.48187e-10, 0, -49.9973, 0, 1.95374, 0, 0.021692, 0, -2.18545e-06, 0.164431, 2.66164, 13.2967)
skeleton = NodePath("../Ground")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
process_mode = 1
environment = SubResource("Environment_juh5q")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
process_mode = 1
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_energy = 0.494
shadow_enabled = true

[node name="Shader" parent="." instance=ExtResource("7_whgx2")]

[node name="Old" type="Node" parent="."]

[node name="Chest" parent="Old" instance=ExtResource("3_5iol5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.97613, 4.76837e-07, 9.0592)
visible = false

[node name="Barrel" parent="Old" instance=ExtResource("4_vmse7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.525117, 0.685578, 9.62691)
visible = false

[node name="Barrel2" parent="Old" instance=ExtResource("4_vmse7")]
transform = Transform3D(0.0638182, 0.997962, 0, -0.997962, 0.0638182, 0, 0, 0, 1, 0.498237, 0.319123, 10.4921)
visible = false

[node name="Box" parent="Old" instance=ExtResource("5_njdd2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.88613, 0.494556, 10.2725)
visible = false

[node name="Skeleton" type="MeshInstance3D" parent="Old"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.91035, -1.44663, 8.37773)
material_override = ExtResource("8_u6rtx")
mesh = ExtResource("9_mu2pk")
skeleton = NodePath("../..")
script = ExtResource("10_ul3hu")

[node name="Node" type="Node" parent="."]

[node name="Floor 3x2" parent="Node" instance=ExtResource("15_e4xlv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35591, 0, 6.82137)

[node name="Floor 1x3" parent="Node" instance=ExtResource("16_g2ca7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 0, 11.8214)

[node name="Floor 3x4" parent="Node" instance=ExtResource("15_e4xlv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.644092, 0, 6.82137)

[node name="Floor 3x3" parent="Node" instance=ExtResource("17_62ap3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 0, 6.82137)

[node name="Floor 3x5" parent="Node" instance=ExtResource("15_e4xlv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35591, 0, 9.82137)

[node name="Floor 3x6" parent="Node" instance=ExtResource("15_e4xlv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.644092, 0, 9.82137)

[node name="Floor 3x7" parent="Node" instance=ExtResource("17_62ap3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 0, 9.82137)

[node name="Floor 1x2" parent="Node" instance=ExtResource("18_3b8oy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.644092, 0, 11.8214)

[node name="Floor 1x4" parent="Node" instance=ExtResource("18_3b8oy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35591, 0, 11.8214)

[node name="Floor 1x5" parent="Node" instance=ExtResource("16_g2ca7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 0, 4.82137)

[node name="Floor 1x6" parent="Node" instance=ExtResource("18_3b8oy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.644092, 0, 4.82137)

[node name="Floor 1x7" parent="Node" instance=ExtResource("18_3b8oy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35591, 0, 4.82137)

[node name="Wall 3x3" parent="Node" instance=ExtResource("19_bfg7k")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.85591, 1.5, 12.3214)

[node name="Wall 3x4" parent="Node" instance=ExtResource("19_bfg7k")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 1.64409, 1.5, 8.82137)

[node name="DoorFrame2" parent="Node" instance=ExtResource("20_28g8h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 0, 4.07137)

[node name="Wall 3x92" parent="Node" instance=ExtResource("21_0xqav")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -6.85591, -1.5, 4.82137)

[node name="Wall 3x0_15" parent="Node" instance=ExtResource("23_562ac")]
transform = Transform3D(-2.38419e-07, 0, -1, 0, 1, 0, 1, 0, -2.38419e-07, -6.85591, -1.5, 5.57137)

[node name="Wall 3x5" parent="Node" instance=ExtResource("19_bfg7k")]
transform = Transform3D(-2.18557e-07, 0, 1, 0, 1, 0, -1, 0, -2.18557e-07, -5.35591, 1.5, 8.82137)

[node name="iCorner 3x2" parent="Node" instance=ExtResource("24_30bp4")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.644092, 1.5, 11.3214)

[node name="iCorner 2x2" parent="Node" instance=ExtResource("25_sg6tx")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.644092, 4, 11.3214)

[node name="iCorner 2x3" parent="Node" instance=ExtResource("25_sg6tx")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -4.35591, 4, 11.3214)

[node name="iCorner 2x4" parent="Node" instance=ExtResource("25_sg6tx")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -4.35591, 4, 5.32137)

[node name="iCorner 2x5" parent="Node" instance=ExtResource("25_sg6tx")]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 0.644092, 4, 5.32137)

[node name="Wall 2x3" parent="Node" instance=ExtResource("26_s4t6e")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.35591, 4, 8.82137)

[node name="Wall 2x4" parent="Node" instance=ExtResource("26_s4t6e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 4, 4.32137)

[node name="Wall 2x5" parent="Node" instance=ExtResource("26_s4t6e")]
transform = Transform3D(2.98023e-08, 0, -1, 0, 1, 0, 1, 0, 2.98023e-08, 1.64409, 4, 8.82137)

[node name="Wall 2x6" parent="Node" instance=ExtResource("26_s4t6e")]
transform = Transform3D(-1, 0, 1.39091e-08, 0, 1, 0, -1.39091e-08, 0, -1, -1.85591, 4, 12.3214)

[node name="iCorner 3x3" parent="Node" instance=ExtResource("24_30bp4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -4.35591, 1.5, 11.3214)

[node name="Wall 2x1" parent="Node" instance=ExtResource("27_emh7y")]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -5.35591, 4, 6.82137)

[node name="Wall 2x2" parent="Node" instance=ExtResource("27_emh7y")]
transform = Transform3D(8.74228e-08, 0, -1, 0, 1, 0, 1, 0, 8.74228e-08, 1.64409, 4, 6.82137)

[node name="Wall 0_5x3" parent="Node" instance=ExtResource("28_8kia2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 2.75, 4.32137)

[node name="Wall 0_5x4" parent="Node" instance=ExtResource("28_8kia2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.85591, 2.75, 3.82137)

[node name="iCorner 3x4" parent="Node" instance=ExtResource("24_30bp4")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -4.35591, 1.5, 5.32137)

[node name="Wall 3x1" parent="Node" instance=ExtResource("21_0xqav")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.35591, 1.5, 6.82137)

[node name="Wall 3x2" parent="Node" instance=ExtResource("21_0xqav")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.64409, 1.5, 6.82137)

[node name="Wall 2x0_5" parent="Node" instance=ExtResource("29_5ohsm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.10591, 1.5, 4.32137)

[node name="Wall 2x0_6" parent="Node" instance=ExtResource("29_5ohsm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.605908, 1.5, 4.32137)

[node name="Wall 0_5x0_5" parent="Node" instance=ExtResource("30_vdo4m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.10591, 0.25, 4.32137)

[node name="oCorner 2x0_5" parent="Node" instance=ExtResource("31_50n6h")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.10591, 1.5, 4.07137)

[node name="oCorner 2x0_6" parent="Node" instance=ExtResource("31_50n6h")]
transform = Transform3D(-1, 0, -1.63913e-07, 0, 1, 0, 1.63913e-07, 0, -1, -0.605908, 1.5, 4.07137)

[node name="oCorner 0_5x0_5" parent="Node" instance=ExtResource("32_xxhsh")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.605908, 0.25, 4.07137)

[node name="oCorner 0_5x0_6" parent="Node" instance=ExtResource("32_xxhsh")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -3.10591, 0.25, 4.07137)

[node name="Wall 0_5x0_6" parent="Node" instance=ExtResource("30_vdo4m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.605908, 0.25, 4.32137)

[node name="iCorner 3x5" parent="Node" instance=ExtResource("24_30bp4")]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 0.644092, 1.5, 5.32137)

[node name="Roof 1x2" parent="Node" instance=ExtResource("33_20nbc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.644092, 5, 11.8214)

[node name="Roof 1x3" parent="Node" instance=ExtResource("33_20nbc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35591, 5, 11.8214)

[node name="Roof 1x5" parent="Node" instance=ExtResource("33_20nbc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.644092, 5, 4.82137)

[node name="Roof 1x6" parent="Node" instance=ExtResource("33_20nbc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35591, 5, 4.82137)

[node name="Roof 3x3" parent="Node" instance=ExtResource("34_s7yf6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 5, 9.82137)

[node name="Roof 3x4" parent="Node" instance=ExtResource("34_s7yf6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 5, 6.82137)

[node name="Roof 0_5x2" parent="Node" instance=ExtResource("35_q7l62")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 2.5, 4.07137)

[node name="Roof 1x4" parent="Node" instance=ExtResource("36_solcj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 5, 11.8214)

[node name="Roof 1x7" parent="Node" instance=ExtResource("36_solcj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 5, 4.82137)

[node name="Roof 3x2" parent="Node" instance=ExtResource("37_scpec")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35591, 5, 6.82137)

[node name="Roof 3x5" parent="Node" instance=ExtResource("37_scpec")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.644092, 5, 6.82137)

[node name="Roof 3x6" parent="Node" instance=ExtResource("37_scpec")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.644092, 5, 9.82137)

[node name="Roof 3x7" parent="Node" instance=ExtResource("37_scpec")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.35591, 5, 9.82137)

[node name="OmniLight3D2" type="OmniLight3D" parent="Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, 2.5, 8.69637)
light_color = Color(0.894118, 0.392157, 0, 1)
light_energy = 16.0
omni_range = 5.89693

[node name="Bonefire" parent="Node" instance=ExtResource("38_7rimi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85591, -0.312391, 9.94637)

[node name="Enemy" parent="." instance=ExtResource("39_nybmh")]
transform = Transform3D(0.720103, 0, 0.693867, 0, 1, 0, -0.693867, 0, 0.720103, 0.137978, 0, 7.15011)
script = null

[node name="Head" parent="Enemy/Model" index="1"]
script = null

[node name="Sprite3D" parent="Enemy" index="5"]
visible = false
texture = SubResource("ViewportTexture_ywirj")

[connection signal="pressed" from="CanvasLayer/Menu/ColorRect/MarginContainer2/RichTextLabel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlesRect/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlesRect/Dev Room" to="." method="_on_dev_room_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlesRect/Controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="CanvasLayer/ControlesRect/Quit" to="." method="_on_quit_pressed"]

[editable path="Enemy"]
